@@ -12,8 +12,10 @@
 - New MIBs added: ASTARO-MIB, CPQHOST-MIB, CPQPOWER-MIB
 - Special support for wireless switches
 - Driver for Motorola/Symbol wireless switches
+- Fixed export bugs in database manager
 - Management console:
 	- "Export to CSV" option added to most tabular data views
+	- Auto login option for web console
 - Fixed issues: #86, #199, #242, #249, #250, #251
 
 
